--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,10 +1,25 @@
-# tmux.conf
+# tmux.conf 
 # @author: shubbaki (https://shubakki.github.io/)
-# modified by: an00brektn (https://notateamserver.xyz)
+# modified by: ainchentmew2 (https://ainchentmew2.github.io/)
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
+set -g status-interval 1
 set -g status-justify centre           # center window list for clarity
+set -g status-style fg=white,bg=black
+
+# Highlight the current window.
+setw -g window-status-current-style fg=white,bg=red,bright
+
+# Status Bar Left side
+set -g status-left-length 60
+set -g status-left-style default
+set -g status-left "#h #( ~/.tmux/left_status.sh )"
+
+# Status Bar Right side
+set -g status-right-length 60
+set -g status-right-style default
+set -g status-right "#( ~/.tmux/right_status.sh )"
 
 unbind-key C-b
 unbind '"'
@@ -35,11 +50,10 @@ bind -n C-S-Down resize-pane -D
 
 # zoom in and kill panes
 bind x resize-pane -Z
-bind w kill-pane
 
 # Split like terminator
-bind e split-window -h -c "#{pane_current_path}"
-bind o split-window -v -c "#{pane_current_path}"
+bind e split-window -h
+bind o split-window -v
 
 # move panes without prefix
 bind -n M-Left select-pane -L
@@ -64,7 +78,7 @@ set -g default-terminal 'screen-256color'
 set -g mouse on
 
 # Send command to all panes in current session
-bind E command-prompt -p "Command:" \
+bind c command-prompt -p "Command:" \
          "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
                 | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
@@ -79,13 +93,13 @@ set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 # VPN IP 
 # show host name and IP address on left side of status bar
-set -g status-left-length 60
-set -g status-bg green
-set -g status-right-length 85
+# set -g status-left-length 60
+# set -g status-bg green
+# set -g status-right-length 85
 # set -g status-right "#[fg=white,bg=black] #(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}')#(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}')#(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}')#(ifconfig tun0 | grep 'inet ' | awk '{print \"tun0 \" $2}')#(ifconfig tap0 | grep 'inet ' | awk '{print \"tap0 \" $2}') #[fg=black,bg=default] %H:%M %d-%b-%y"
 # set -g status-right " #[fg=white,bg=black] #(/opt/vpn.sh) #[fg=black,bg=default] %H:%M %d-%b-%y #[fg=black,bg=default] "
 # set -g status-right " #[fg=white,bg=black] #(/opt/vpn-tap0-tmux.sh) #[fg=black,bg=default] %H:%M %d-%b-%y #[fg=black,bg=default] "
-set -g status-right "#{prefix_highlight} #[fg=white,bg=black] #(/opt/vpn.sh) #[fg=red,bg=black]#(ifconfig tun0 | grep 'inet ' | awk '{print \"tun0 \" $2}') #[fg=black,bg=green] %H:%M %d-%b-%y"
+# set -g status-right "#{prefix_highlight} #[fg=white,bg=black] #(/opt/vpn.sh) #[fg=red,bg=black]#(ifconfig tun0 | grep 'inet ' | awk '{print \"tun0 \" $2}') #[fg=black,bg=green] %H:%M %d-%b-%y"
 
 
 # Other examples:
@@ -97,7 +111,7 @@ set -g status-right "#{prefix_highlight} #[fg=white,bg=black] #(/opt/vpn.sh) #[f
 # bind '"' split-window -c "#{pane_current_path}"
 # bind % split-window -h -c "#{pane_current_path}"
 # Windows Repeatable
-bind -r c new-window -c '#{pane_current_path}'
+#bind -r c new-window -c '#{pane_current_path}'
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "[+] Config reloaded..."
@@ -107,5 +121,3 @@ set -g base-index 1
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-
